todoyu sysmanager extension changelog

sysmanager 1.2.0 - not released yet
	* Changed: Sysmanager now contains all functionality of the newly deprecated sysmanager extension


sysmanager 1.1.4 - 2011-12-13
	* Added: Added config option for new debug level core
	* Changed: Persons in role form are now sorted alphabetically (instead of ID)

sysmanager 1.1.3 - 2011-11-17
	* Bugfix: Set record ID, and change ID to zero for new record (instead of -1, which breaks clean field naming)
	* Translation: Polish

sysmanager 1.1.2 - 2011-09-15
	* Bugfix: Error label was interpolated too soon
	* Bugfix: Uploaded extensions were not recognized as commercial without a license
	* Added: Items amount in records listing
	* Changed: Extension status is now also recognized when not lowercase (ex: Beta)

sysmanager 1.1.1 - 2011-07-25
	* Bugfix: Send info for registration to check API version
	* Bugfix: Fixed invalid labels in checkout dialogs
	* Feature: Added functionality to register imported extensions
	* Added: Missing label, error prevention on unknown extensions
	* Added: Testing for invalid repository response and throw exception
	* Added: German translations
	* Added: Problem with the API are now reported to the user
	* Changed: Changed API to work with new tER API

sysmanager 1.1.0 - 2011-06-17
 	* Bugfix: Added missing notification after deletion of role
	* Feature: Added todoyuURL setting in config
	* Feature: Added classes for repository and updater
	* Feature: Show message if no roles is selected
	* Feature: Added update warning to extension update dialog
	* Feature: Added system logging level configuration in sysmanager
	* Changed: Default setting for required password strength: 5 chars minimum length, no special chars
	* Changed: Requires core 2.1
	* Changed: Structure for 2.1
	* Changed: All classes are prefixed with extension name
	* Changed: Sysmanager now looks for extension extconf.xml files in config\form\sysmanager\


