@@ -81,4 +81,5 @@
 	<label index="config.selectlogo.info">Select an image you'd like to use as your logo. The image will automatically resized to a maximum of 190x60 pixels. Allowed are jpg, png and gif</label>
 	<label index="config.tab.repository">Repository</label>
 	<label index="config.tab.repository.saved">Repository configuration saved</label>
+	<label index="quickinfo.right.depends">Requires the following rights:</label>
 </labels>
