@@ -27,9 +27,7 @@
 			<tr class="right" id="right-{$sectionName}-{$right.right}">
 				<td class="label">
 					<a href="javascript:void(0)" onclick="Todoyu.Ext.sysmanager.RightsEditor.toggleRight('{$sectionName}:{$right.right}')" title="[{$sectionName}:{$right.right}] {$right.comment}">{$right.label}</a>
-					{if sizeof($right.require) > 0 }
-						<span class="require" title="{Label sysmanager.ext.rights.require}: {implode(', ', $right.require)}"></span>
-					{/if}
+					{if sizeof($right.require) > 0 }{rightLabel $extension $sectionName $right.right}{/if}
 				</td>
 				{foreach reverse($roles) key role roleRights}
 					<td class="enumColBG{$.foreach.roleRights.total-$.foreach.roleRights.index % $amountColors} roleRight">
@@ -43,9 +41,7 @@
 	{/foreach}
 	<input type="hidden" name="extension" value="{$extension}" />
 
-	{if empty($rights)}
-		{contentMessage 'sysmanager.ext.rights.notAvailable'}
-	{/if}
+	{if empty($rights)}{contentMessage 'sysmanager.ext.rights.notAvailable'}{/if}
 
 </form>
 
